plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.4'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.flywaydb.flyway' version '9.22.3'
}

group = 'br.com.curso'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'

	implementation("org.springframework.boot:spring-boot-starter-validation:3.4.4")
	implementation("org.springframework.boot:spring-boot-starter-security:3.5.0")
	implementation("org.springframework.boot:spring-boot-starter-oauth2-resource-server:3.5.0")
	implementation("org.springframework.boot:spring-boot-starter-webflux")

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'com.github.tomakehurst:wiremock-jre8:2.35.0'
	testRuntimeOnly 'com.h2database:h2'
	testRuntimeOnly 'javax.servlet:javax.servlet-api:4.0.1'
	testImplementation 'org.eclipse.jetty:jetty-server:9.4.49.v20220914'
	testImplementation 'org.eclipse.jetty:jetty-util:9.4.49.v20220914'
}

configurations.all {
    resolutionStrategy.eachDependency { details ->
        if (details.requested.group == 'org.eclipse.jetty') {
            details.useVersion '9.4.49.v20220914'
            details.because 'Force Jetty 9 to be compatible with WireMock test runtime'
        }
    }
}

tasks.named('test') {
	useJUnitPlatform()
}
